# website

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  angular.json  app.vue  build.sh  components.json  go.mod  go.sum  karma.conf.js  main.go  nuxt.config.ts  oidc.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: docker-publish.yml
.kube/: develop-deployment-linkerd.yaml  develop-deployment.yaml  stable-deployment-linkerd.yaml
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
app/src/components/: about.rs  activate_modal.rs  add_user.rs  admin.rs  alert_modal.rs  create_object.rs  create_project.rs  create_token.rs  dash.rs  dash_landing_content.rs  dash_nav.rs  data_proxies.rs  footer.rs  header.rs  imprint.rs  login_modal.rs  main_body.rs  mod.rs  objects.rs  panel.rs  panel_content.rs  panel_nav.rs  personal_resources.rs  project.rs  project_admin.rs  projects.rs  register.rs  search.rs  token.rs  tokens.rs  tos.rs  user.rs
app/src/utils/: aruna_api_handlers.rs  aruna_api_helpers.rs  conversion_helpers.rs  login_helpers.rs  mail.rs  mocks.rs  mod.rs  modal.rs  oidc.rs  structs.rs  tabler_utils.rs  visual_helpers.rs
assets/styles/: main.css  main.scss
authz/: jwt.go
client/: baseClient.go
components/: faq_section.vue  feature_cards.vue  fetch_test.vue  footer.vue  full_card.vue  hooks_card.vue  intro_section.vue  labels_card.vue  meta_section.vue  navigation.vue  navigation_legacy.vue  partner_section.vue  relations_card.vue  resource_card.vue  resource_license_badge.vue  resource_permission_badge.vue  resource_status_badge.vue  resource_type_badge.vue  search_results.vue  sidebar.vue  small_card.vue  stats_card.vue  timeline_section.vue  user_active_badge.vue  user_role_badge.vue
components/Navbar/: top.vue
components/badge/: dataclass.vue  resource_license.vue  resource_permission.vue  resource_status.vue  resource_type.vue  stats.vue
components/card/: Labels.vue  authors.vue  downloads.vue  hooks.vue  labels.vue  name.vue  news.vue  relations.vue  resource.vue  small_info.vue  stats.vue
components/custom-ui/: RegistrationDialog.vue
components/modal/: ObjectDisplay.vue  Ontology.vue  author.vue  key_value.vue  object_display.vue  ontology.vue  register.vue  relation.vue  s3credentials.vue  token.vue  token_create.vue
components/navbar/: top.vue
components/navigation/: sidebar.vue  top.vue
components/section/: faq.vue  features.vue  features2.vue  features_old.vue  hero.vue  hero02.vue  hero_old.vue  newsletter.vue
components/toast/: error.vue  info.vue
composables/: ArunaError.ts  EventBus.ts  ResourceInfo.ts  api_wrapper.ts  constants.ts  enum_conversions.ts  proto_conversions.ts  tabler_utils.ts  utils.ts
composables/aruna_api_json/: index.ts
composables/ts_api/: OntologyDoc.ts  SelectOntologyResponse.ts
config/dev/: config.yaml
config/local/: config.yaml
config/stable/: config.yaml
deployment/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
e2e/src/: app.e2e-spec.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
js/: modal_wrapper.js
middleware/: auth.go  check-access.ts  maintenance.global.ts
pages/: about.vue  explore.vue  imprint.vue  index.vue  news.vue  tos.vue
pages/articles/: [id].vue
pages/objects/: [id].vue  create.vue
pages/user/: account.vue  admin.vue  resources.vue
plugins/: vue-awesome-paginate.ts
public/: schematic.drawio  tabler.min.css
server/: Cargo.toml  datasetView.go  login.go  server.go
server/api/: announcement.get.ts  announcements.get.ts  collection.post.ts  dataset.post.ts  endpoint.get.ts  endpoints.get.ts  license.get.ts  licenses.get.ts  newsletter_register.post.ts  object.delete.ts  object.post.ts  ontology.get.ts  project.post.ts  register.post.ts  resource-info.ts  resource.get.ts  resources.get.ts  search.post.ts  user.get.ts  users.get.ts
server/api/object/[id]/: download.get.ts  json-ld.get.ts  upload.get.ts
server/api/relation/[id]/: hierarchy.get.ts
server/api/ts/: search.get.ts
server/api/user/: token.delete.ts  tokens.post.ts
server/api/user/[id]/: activate.patch.ts  deactivate.patch.ts
server/api/user/s3_credentials/: [id].get.ts  [id].patch.ts
server/middleware/: intercept.ts  json-ld.ts
server/plugins/: log.ts
server/routes/: callback.get.ts
server/routes/auth/: callback.get.ts  login.get.ts  logout.get.ts  refresh.get.ts
server/src/: fileserv.rs  main.rs  oidc.rs  routes.rs  utils.rs
server/utils/: announcement.ts  licence.ts
src/: app.rs  index.html  lib.rs  main.rs  styles.scss
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/components/: about.rs  activate_modal.rs  add_user.rs  admin.rs  alert_modal.rs  create_project.rs  create_token.rs  footer.rs  greeter.rs  header.rs  imprint.rs  main_body.rs  mod.rs  panel.rs  panel_nav.rs  (+9 more)
static/: buttonFunctions.js
style/: Cargo.toml  main.scss
templates/: baseHeader.html  baseTopBar.html  createDataset.html  createDatasetVersion.html  createProject.html  datasetDetails.html  datasetObjectGroups.html  datasetVersionDetails.html  datasets.html  index.html  objects.html  tokenList.html  userDashboard.html
webserver/: datasetView.go  login.go  server.go
(+466 files in other folders)
