[package]
name = "aruna_web_app"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0"}
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["HtmlDocument", "HtmlInputElement", "Navigator", "Clipboard", "Storage", "File", "FileList", "Blob"] }
regex = "1.9.5"
chrono = "0.4.30"
aruna-rust-api = { version = "2.0.0-beta.3", default-features = false}
bytesize = "1.3.0"
prost-wkt-types = "0.4"
reqwest = "0.11"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

