[package]
name = "aruna_web_app"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0"}
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3", features = ["HtmlDocument", "HtmlInputElement", "Navigator", "Clipboard", "Storage", "File", "FileList", "Blob"] }
regex = "1.10.2"
chrono = "0.4.31"
aruna-rust-api = { version = "2.0.0-beta.11", default-features = false}
bytesize = "1.3.0"
prost-wkt-types = "0.5"
reqwest = "0.11"
tonic = { version = "0.10.2", features=["tls", "tls-roots"], optional = true }
axum-core = "0.3.4"
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
lettre = { version = "0.11.1", optional = true }
openidconnect = { version = "3.4.0", optional = true }
url = "2.4.1"
time = "0.3.30"

urlencoding = "2.1.3"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "aruna-rust-api/transport", "dep:tonic", "tonic/transport", "tonic/tls", "tonic/tls-roots", "dep:lettre", "dep:openidconnect"]

