[package]
name = "aruna_web_server"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aruna_web_app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true

anyhow = "1.0.75"
serde = { version = "1.0.192", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.108"
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
time = "0.3.30"
urlencoding = "2.1.3"
